--- a/public/buildings.html
+++ b/public/buildings.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Buildings</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Buildings</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
+  <body>
+    <script src="js/lodash.min.js"></script>
+    <script src="js/d3.v5.min.js"></script>
+    <script src="js/buildings.js"></script>
 
-<body>
-  <script src="js/lodash.min.js"></script>
-  <script src="js/d3.v5.min.js"></script>
-  <script src="js/buildings.js"></script>
-
-  <div class="container">
-    <div class="row">
-      <div id="chart-area"></div>
+    <div class="container">
+      <div class="row">
+        <div id="chart-area"></div>
+        <div id="chart-data"></div>
+      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
