--- a/public/buildings.html
+++ b/public/buildings.html
@@ -5,19 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Buildings</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <script src="js/lodash.min.js"></script>
-    <script src="js/d3.v5.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"
+      integrity="sha256-VeNaFBVDhoX3H+gJ37DpT/nTuZTdjYro9yBruHjVmoQ="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.0/d3.min.js"
+      integrity="sha256-m0QmIsBXcOMiETRmpT3qg2IQ/i0qazJA2miCHzOmS1Y="
+      crossorigin="anonymous"
+    ></script>
     <script src="js/buildings.js"></script>
 
     <div class="container">
       <div class="row">
-        <div id="chart-area"></div>
-        <div id="chart-data"></div>
+        <div id="chart-area" class="col-sm"></div>
+        <div id="chart-data" class="col-sm"></div>
       </div>
     </div>
   </body>
