--- a/public/companies.html
+++ b/public/companies.html
@@ -29,7 +29,9 @@
 
     <div class="container">
       <div class="row">
-        <div id="chart-area" class="col-sm"></div>
+        <div id="chart-area" class="col-sm">
+          <svg></svg>
+        </div>
         <div id="chart-data" class="col-sm"></div>
       </div>
     </div>
