Add slider to view transactions

--- a/public/equity.html
+++ b/public/equity.html
@@ -48,6 +48,44 @@
         </div>
         <div id="chart-data" class="col-sm"></div>
       </div>
-    </di>
+      <div class="tables">
+      <div id="transactions-table" >
+        <h3>Transactions Records</h3>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Id</th>
+              <th colspan="3">Buy</th>
+              <th colspan="3">Sell</th>
+              <th>Profit/Loss</th>
+            </tr>
+            <tr>
+              <tr>
+                <th></th>
+                <th>Date</th>
+                <th>Closing Price</th>
+                <th>SMA</th>
+                <th>Date</th>
+                <th>Closing Price</th>
+                <th>SMA</th>
+                <th></th>
+              </tr>              
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+      <div id="transactions-summary" class="table-responsive">
+        <h3>
+          Summary
+        </h3>
+        <table class="table table-hover table-striped	">
+          <tbody>
+
+          </tbody>
+        </table>
+      </div>
+    </div>
+    </div>
   </body>
 </html>
